4.x: Update to static content (#9502)
* Static content update
- WebServer feature to support static content from configuration
- new Builder API based prototypes to configure it
- deprecated old approach

* Use defaults for sockets and welcome file.
Added singular methods for classpath and path handlers.
Renamed welcome file to welcome to align with current MP configuration option.

* CDI extension update to use new API with same defaults,
update to deprecated usages to avoid compiler warnings.

* Documentation update for MP and SE.

* Fix classpath root cleanup.
Fix configuration used in MP extension.

* Introduction of io.helidon.common.Size to handle size strings (similar to Java's Duration, but for size in bytes).
Update to builder to support nice defaults for size.
Update to PR to fix comments, and use Size for memory cache capacity.